--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-<h1 class="text-center mt-5">Jordan - Vétements et Chaussures</h1>
+<h1 class="text-center m-5">Jordan - Vétements et Chaussures</h1>
 
-
+<img src="{{asset('images/jordan.avif')}}" alt="" class="img-fluid w-100 h-100 object-fit-cover">
 {% endblock %}
