--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+  <a class="navbar-brand" href="#"><img src="{{asset('images/jordanLogo.jpg')}}" alt="" style="width: 60px;"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -11,10 +11,16 @@
       <li class="nav-item">
         <a class="nav-link" href="{{path('app_shop')}}">Shop</a>
       </li>
+      {% if 'ROLE_ADMIN' in app.user.roles   %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{path('admin')}}">Gestion des Stocks</a>
+          </li>
+      {% endif %}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Compte
         </a>
+        
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
         {% if app.user %}
           <a class="dropdown-item" href="{{path('app_logout')}}">Deconnexion</a>
