--- a/templates/shop/shop.html.twig
+++ b/templates/shop/shop.html.twig
@@ -1,25 +1,34 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<form method="get" action="{{path('app_shop')}}">
-    <select name="type" class="form-select" aria-label="Default select example" onchange="this.form.submit()">
-    <option value=""{% if not type %}selected{% endif %}>Tous les produits</option>
-    <option value="Chaussure"{% if type == 'Chaussure' %}selected{% endif %}>Chaussures</option>
-    <option value="Vétement"{% if type == 'Vétement' %}selected{% endif %}>Vêtements</option>
-    </select>
-</form>
+<div class="m-5">
+    <form method="get" action="{{path('app_shop')}}">
+        <select name="type" class="form-select" aria-label="Default select example" onchange="this.form.submit()">
+        <option value=""{% if not type %}selected{% endif %}>Tous les produits</option>
+        <option value="Chaussure"{% if type == 'Chaussure' %}selected{% endif %}>Chaussures</option>
+        <option value="Vétement"{% if type == 'Vétement' %}selected{% endif %}>Vêtements</option>
+        </select>
+    </form>
 
+</div>
 
-{% for produit in produits %}
-    {% if produit.stock >0 %}
-        <div class="card" style="width: 18rem;">
-            <img src="{{produit.image}}" class="card-img-top" alt="">
-            <div class="card-body">
-                <h5 class="card-title">{{produit.name}} {{produit.modele}}</h5>
-                <p class="card-text">{{produit.prix}}€</p>
-                <p class="card-text">Stock : {{produit.stock}}</p>
-            </div>
-        </div>
-    {% endif %}
-{% endfor %}
+<div class="container mt-4">
+    <div class="row justify-content-around gap-5">
+        {% for produit in produits %}
+            {% if produit.stock >0 %}
+                <div class="card p-2" style="width: 18rem;">
+                    <img src="{{produit.image}}" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">{{produit.name}} {{produit.modele}}</h5>
+                        <p class="card-text">{{produit.prix}}€</p>
+                        <p class="card-text">Stock : {{produit.stock}}</p>
+                        <a href="#" class="btn btn-buy">Acheter</a>
+                    </div>
+                </div>
+            {% endif %}
+        {% endfor %}
+    </div>
+
+</div>
+
 {% endblock %}
