--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-    <form method="post">
+    <form method="post" class="m-3">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
@@ -14,12 +14,12 @@
             </div>
         {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="username">Email</label>
-        <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
-        <label for="password">Password</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
-        <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
+        <h1 class="m-3">Connexion</h1>
+            <label for="username" class="form-label">Email :</label>
+            <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control mb-2 color-jordan" autocomplete="email" required autofocus>
+            <label for="password" class="form-label">Mot de passe :</label>
+            <input type="password" name="_password" id="password" class="form-control mb-2 color-jordan" autocomplete="current-password" required>
+            <input type="hidden" name="_csrf_token" data-controller="csrf-protection" value="{{ csrf_token('authenticate') }}">
 
         {#
             Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -31,8 +31,8 @@
             </div>
         #}
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
+        <button class="btn btn-buy m-3" type="submit">
+            Connexion
         </button>
     </form>
 {% endblock %}
