--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -11,11 +11,11 @@
       <li class="nav-item">
         <a class="nav-link" href="{{path('app_shop')}}">Shop</a>
       </li>
-      {% if 'ROLE_ADMIN' in app.user.roles   %}
+      {# {% if 'ROLE_ADMIN' in app.user.roles   %}
           <li class="nav-item">
             <a class="nav-link" href="{{path('admin')}}">Gestion des Stocks</a>
           </li>
-      {% endif %}
+      {% endif %} #}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Compte
