--- a/templates/shop/shop.html.twig
+++ b/templates/shop/shop.html.twig
@@ -16,9 +16,9 @@
     <div class="row justify-content-around gap-5">
         {% for produit in produits %}
             {% if produit.stock >0 %}
-                <div class="card p-2" style="width: 18rem;">
+                <div class="card p-2 d-flex flex-column justify-content-between" style="width: 18rem;">
                     <img src="{{produit.image}}" class="card-img-top" alt="">
-                    <div class="card-body">
+                    <div class="card-body d-flex flex-column justify-content-end">
                         <h5 class="card-title">{{produit.name}} {{produit.modele}}</h5>
                         <p class="card-text">{{produit.prix}}€</p>
                         <p class="card-text">Stock : {{produit.stock}}</p>
@@ -28,7 +28,6 @@
             {% endif %}
         {% endfor %}
     </div>
-
 </div>
 
 {% endblock %}
